parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ASIGNACION
    IMPRIMIR
    MIENTRAS
    PARA
    SI
    SINO
    VAR
    VARIABLE

Grammar

Rule 0     S' -> expression
Rule 1     expression -> expression SUMA term
Rule 2     expression -> expression RESTA expression
Rule 3     expression -> RESTA expression
Rule 4     expression -> term
Rule 5     term -> term MULTIPLICACION factor
Rule 6     term -> term DIVISION factor
Rule 7     term -> factor
Rule 8     factor -> NUMERO
Rule 9     factor -> PARENTESIS_I expression PARENTESIS_D

Terminals, with rules where they appear

ASIGNACION           : 
DIVISION             : 6
IMPRIMIR             : 
MIENTRAS             : 
MULTIPLICACION       : 5
NUMERO               : 8
PARA                 : 
PARENTESIS_D         : 9
PARENTESIS_I         : 9
RESTA                : 2 3
SI                   : 
SINO                 : 
SUMA                 : 1
VAR                  : 
VARIABLE             : 
error                : 

Nonterminals, with rules where they appear

expression           : 1 2 2 3 9 0
factor               : 5 6 7
term                 : 1 4 5 6

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . expression SUMA term
    (2) expression -> . expression RESTA expression
    (3) expression -> . RESTA expression
    (4) expression -> . term
    (5) term -> . term MULTIPLICACION factor
    (6) term -> . term DIVISION factor
    (7) term -> . factor
    (8) factor -> . NUMERO
    (9) factor -> . PARENTESIS_I expression PARENTESIS_D

    RESTA           shift and go to state 3
    NUMERO          shift and go to state 5
    PARENTESIS_I    shift and go to state 6

    expression                     shift and go to state 1
    term                           shift and go to state 2
    factor                         shift and go to state 4

state 1

    (0) S' -> expression .
    (1) expression -> expression . SUMA term
    (2) expression -> expression . RESTA expression

    SUMA            shift and go to state 7
    RESTA           shift and go to state 8


state 2

    (4) expression -> term .
    (5) term -> term . MULTIPLICACION factor
    (6) term -> term . DIVISION factor

    SUMA            reduce using rule 4 (expression -> term .)
    RESTA           reduce using rule 4 (expression -> term .)
    $end            reduce using rule 4 (expression -> term .)
    PARENTESIS_D    reduce using rule 4 (expression -> term .)
    MULTIPLICACION  shift and go to state 9
    DIVISION        shift and go to state 10


state 3

    (3) expression -> RESTA . expression
    (1) expression -> . expression SUMA term
    (2) expression -> . expression RESTA expression
    (3) expression -> . RESTA expression
    (4) expression -> . term
    (5) term -> . term MULTIPLICACION factor
    (6) term -> . term DIVISION factor
    (7) term -> . factor
    (8) factor -> . NUMERO
    (9) factor -> . PARENTESIS_I expression PARENTESIS_D

    RESTA           shift and go to state 3
    NUMERO          shift and go to state 5
    PARENTESIS_I    shift and go to state 6

    expression                     shift and go to state 11
    term                           shift and go to state 2
    factor                         shift and go to state 4

state 4

    (7) term -> factor .

    MULTIPLICACION  reduce using rule 7 (term -> factor .)
    DIVISION        reduce using rule 7 (term -> factor .)
    SUMA            reduce using rule 7 (term -> factor .)
    RESTA           reduce using rule 7 (term -> factor .)
    $end            reduce using rule 7 (term -> factor .)
    PARENTESIS_D    reduce using rule 7 (term -> factor .)


state 5

    (8) factor -> NUMERO .

    MULTIPLICACION  reduce using rule 8 (factor -> NUMERO .)
    DIVISION        reduce using rule 8 (factor -> NUMERO .)
    SUMA            reduce using rule 8 (factor -> NUMERO .)
    RESTA           reduce using rule 8 (factor -> NUMERO .)
    $end            reduce using rule 8 (factor -> NUMERO .)
    PARENTESIS_D    reduce using rule 8 (factor -> NUMERO .)


state 6

    (9) factor -> PARENTESIS_I . expression PARENTESIS_D
    (1) expression -> . expression SUMA term
    (2) expression -> . expression RESTA expression
    (3) expression -> . RESTA expression
    (4) expression -> . term
    (5) term -> . term MULTIPLICACION factor
    (6) term -> . term DIVISION factor
    (7) term -> . factor
    (8) factor -> . NUMERO
    (9) factor -> . PARENTESIS_I expression PARENTESIS_D

    RESTA           shift and go to state 3
    NUMERO          shift and go to state 5
    PARENTESIS_I    shift and go to state 6

    expression                     shift and go to state 12
    term                           shift and go to state 2
    factor                         shift and go to state 4

state 7

    (1) expression -> expression SUMA . term
    (5) term -> . term MULTIPLICACION factor
    (6) term -> . term DIVISION factor
    (7) term -> . factor
    (8) factor -> . NUMERO
    (9) factor -> . PARENTESIS_I expression PARENTESIS_D

    NUMERO          shift and go to state 5
    PARENTESIS_I    shift and go to state 6

    term                           shift and go to state 13
    factor                         shift and go to state 4

state 8

    (2) expression -> expression RESTA . expression
    (1) expression -> . expression SUMA term
    (2) expression -> . expression RESTA expression
    (3) expression -> . RESTA expression
    (4) expression -> . term
    (5) term -> . term MULTIPLICACION factor
    (6) term -> . term DIVISION factor
    (7) term -> . factor
    (8) factor -> . NUMERO
    (9) factor -> . PARENTESIS_I expression PARENTESIS_D

    RESTA           shift and go to state 3
    NUMERO          shift and go to state 5
    PARENTESIS_I    shift and go to state 6

    expression                     shift and go to state 14
    term                           shift and go to state 2
    factor                         shift and go to state 4

state 9

    (5) term -> term MULTIPLICACION . factor
    (8) factor -> . NUMERO
    (9) factor -> . PARENTESIS_I expression PARENTESIS_D

    NUMERO          shift and go to state 5
    PARENTESIS_I    shift and go to state 6

    factor                         shift and go to state 15

state 10

    (6) term -> term DIVISION . factor
    (8) factor -> . NUMERO
    (9) factor -> . PARENTESIS_I expression PARENTESIS_D

    NUMERO          shift and go to state 5
    PARENTESIS_I    shift and go to state 6

    factor                         shift and go to state 16

state 11

    (3) expression -> RESTA expression .
    (1) expression -> expression . SUMA term
    (2) expression -> expression . RESTA expression

    SUMA            reduce using rule 3 (expression -> RESTA expression .)
    RESTA           reduce using rule 3 (expression -> RESTA expression .)
    $end            reduce using rule 3 (expression -> RESTA expression .)
    PARENTESIS_D    reduce using rule 3 (expression -> RESTA expression .)

  ! SUMA            [ shift and go to state 7 ]
  ! RESTA           [ shift and go to state 8 ]


state 12

    (9) factor -> PARENTESIS_I expression . PARENTESIS_D
    (1) expression -> expression . SUMA term
    (2) expression -> expression . RESTA expression

    PARENTESIS_D    shift and go to state 17
    SUMA            shift and go to state 7
    RESTA           shift and go to state 8


state 13

    (1) expression -> expression SUMA term .
    (5) term -> term . MULTIPLICACION factor
    (6) term -> term . DIVISION factor

    SUMA            reduce using rule 1 (expression -> expression SUMA term .)
    RESTA           reduce using rule 1 (expression -> expression SUMA term .)
    $end            reduce using rule 1 (expression -> expression SUMA term .)
    PARENTESIS_D    reduce using rule 1 (expression -> expression SUMA term .)
    MULTIPLICACION  shift and go to state 9
    DIVISION        shift and go to state 10


state 14

    (2) expression -> expression RESTA expression .
    (1) expression -> expression . SUMA term
    (2) expression -> expression . RESTA expression

    SUMA            reduce using rule 2 (expression -> expression RESTA expression .)
    RESTA           reduce using rule 2 (expression -> expression RESTA expression .)
    $end            reduce using rule 2 (expression -> expression RESTA expression .)
    PARENTESIS_D    reduce using rule 2 (expression -> expression RESTA expression .)

  ! SUMA            [ shift and go to state 7 ]
  ! RESTA           [ shift and go to state 8 ]


state 15

    (5) term -> term MULTIPLICACION factor .

    MULTIPLICACION  reduce using rule 5 (term -> term MULTIPLICACION factor .)
    DIVISION        reduce using rule 5 (term -> term MULTIPLICACION factor .)
    SUMA            reduce using rule 5 (term -> term MULTIPLICACION factor .)
    RESTA           reduce using rule 5 (term -> term MULTIPLICACION factor .)
    $end            reduce using rule 5 (term -> term MULTIPLICACION factor .)
    PARENTESIS_D    reduce using rule 5 (term -> term MULTIPLICACION factor .)


state 16

    (6) term -> term DIVISION factor .

    MULTIPLICACION  reduce using rule 6 (term -> term DIVISION factor .)
    DIVISION        reduce using rule 6 (term -> term DIVISION factor .)
    SUMA            reduce using rule 6 (term -> term DIVISION factor .)
    RESTA           reduce using rule 6 (term -> term DIVISION factor .)
    $end            reduce using rule 6 (term -> term DIVISION factor .)
    PARENTESIS_D    reduce using rule 6 (term -> term DIVISION factor .)


state 17

    (9) factor -> PARENTESIS_I expression PARENTESIS_D .

    MULTIPLICACION  reduce using rule 9 (factor -> PARENTESIS_I expression PARENTESIS_D .)
    DIVISION        reduce using rule 9 (factor -> PARENTESIS_I expression PARENTESIS_D .)
    SUMA            reduce using rule 9 (factor -> PARENTESIS_I expression PARENTESIS_D .)
    RESTA           reduce using rule 9 (factor -> PARENTESIS_I expression PARENTESIS_D .)
    $end            reduce using rule 9 (factor -> PARENTESIS_I expression PARENTESIS_D .)
    PARENTESIS_D    reduce using rule 9 (factor -> PARENTESIS_I expression PARENTESIS_D .)

